tests/fail/fail_safety_double_mut.tk
fn main() -> i32 {
    auto x# = 10
    auto &r1 = &x#
    auto &r2 = &x# // Error: already borrowed
    return 0
}
